--- a/GridboxExampl1.html
+++ b/GridboxExampl1.html
@@ -36,7 +36,8 @@
             /* column-gap: 20px;
             row-gap: 50px; */
             /* grid-template-columns: 100px 100px 100px; */
-            grid-template-columns:  1fr 1fr 1fr ;
+            /* grid-template-columns:  1fr 1fr 1fr ; */
+            grid-template-columns: repeat(auto-fit ,1fr);
 
             /* grid-template-rows: 100px 100px 100px; */
             grid-template-rows: 100px 100px 100px 100px 100px;
