--- a/ajax.html
+++ b/ajax.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>AJAX</h1>
-   
+   <button type="button" class="btn">Show Text</button>
     <script src="ajax.js"></script>
 </body>
 </html>
